AgentforceHackathon/force-app/main/default/objects/Vehicle2__c/Vehicle2__c.object-meta.xml
<CustomObject>
    <label>Vehicle</label>
    <nameField>
        <label>Vehicle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>