AgentforceHackathon/force-app/main/default/objects/Vehicle2__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Vehicles</relationshipLabel>
    <relationshipName>Customer</relationshipName>
    <type>Lookup</type>
</CustomField>