AgentforceHackathon/force-app/main/default/objects/Vehicle2__c/fields/Warranty_Active__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Warranty Active</label>
    <type>Checkbox</type>
</CustomField>