AgentforceHackathon/force-app/main/default/objects/Vehicle2__c/fields/Warranty_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Insurance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warranty / Insurance</label>
    <referenceTo>Warranty_Insurance__c</referenceTo>
    <relationshipLabel>Warranty / Insurance</relationshipLabel>
    <relationshipName>Warranty_Insurance</relationshipName>
    <type>Lookup</type>
</CustomField>