AgentforceHackathon/force-app/main/default/objects/Vehicle2__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>VIN__c</columns>
    <columns>Warranty_Active__c</columns>
    <columns>Make__c</columns>
    <columns>Model__c</columns>
    <columns>Fuel_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>